# news-telegram-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: .env.template
docker/django/: Dockerfile  gunicorn.sh
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
server/: celery.py  urls.py  wsgi.py
server/api/v1/: urls.py
server/apps/: __init__.py
server/apps/common/: utils.py
server/apps/newsapi/: apps.py
server/apps/tg_webhook/: apps.py  tasks.py  views.py
server/settings/: __init__.py
server/settings/components/: apps.py  caches.py  celery.py  common.py
